# daily-intelligence-skill

./: .env.example  .gitignore  AGENTS.md  BUILD_REPORT.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.playwright-cli/: page-2026-07-16T05-08-07-326Z.yml
configs/: notion.yaml  sources.yaml
evals/: trigger_cases.json
examples/: README.md  sample_input.json  sample_report.json
references/: editorial-policy.md  notion-schema-fix.md  notion-setup.md  runbook.md  system-design.md  windows-setup.md
schemas/: report.schema.json
scripts/: install.ps1  install.sh
src/daily_intelligence/: __init__.py  access.py  adapters.py  cli.py  collector.py  config.py  content.py  context.py  importer.py  local_output.py  models.py  notion.py  prefetch.py  reporting.py  reports.py  runtime.py  semantics.py  state.py  storage.py  taxonomy.py  utils.py  verification.py  workflow.py
templates/: report-contract.md
tests/: test_architecture.py  test_config.py  test_importer.py  test_normalize.py  test_prefetch.py  test_reporting.py  test_semantics.py
tests/skills/: test_daily_intelligence_skill.py
wiki/: 01-产品目标与边界.md  02-总体架构.md  03-数据与状态模型.md  04-端到端流程.md  05-设计标准.md  06-可靠性与安全.md  07-扩展开发.md  08-测试运维与演进.md  09-依赖配置与注入.md  10-核心算法与跨模块调用.md  Home.md  _Sidebar.md
