[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-intelligence-skill"
version = "1.0.0"
description = "Deterministic collection and multi-format publishing CLI for a twice-daily Agent Skill intelligence brief."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Wang Mingfeng"}]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "playwright>=1.50,<2",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "reportlab>=4.2,<5",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pypdf>=5,<7", "pytest>=8.3,<9", "ruff>=0.9,<1"]

[project.scripts]
daily-intel = "daily_intelligence.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
